# morpc-census

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
app/: app.py
dev/: architecture.md
doc/: 01-morpc-geos-demo.ipynb  02-morpc-census-demo.ipynb  03-morpc-poverty-race-demo.ipynb  api-reference.md  index.md  myst.yml
morpc_census/: __init__.py  api.py  census.py  constants.py  dec_dim_names.json  dec_dims.json  geos.py  tigerweb.py
reference/: dev_notes.md
scripts/: build_dimension_sets.py  dim_namer.py  dimension_sets.json
tests/: conftest.py  test_api.py  test_constants.py  test_geoidfq_class.py  test_geos_classes.py  test_smoke.py  test_tigerweb.py
