[project]
name = "morpc-census"
dynamic = ["version"]
description = "Census data tools used by MORPC"
authors = [
    {name = "MORPC data team", email = "dataandmaps@morpc.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
]
dependencies = [
    "morpc",
    "requests",
    "pandas",
    "geopandas",
    "frictionless",
    "shapely",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "morpc_census.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not network'"
markers = [
    "network: mark test as requiring live network access (skipped by default)",
]

[tool.setuptools.packages.find]
exclude = ["demo"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json"]
